--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <style>
             body {
                 font-family: 'Kiwi Maru', serif;
-                background-color: #lightblue;
+                background-color: #gray;
                 color: white;
             }
         </style>
